--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
  #map {
-   height: 320px;
-   width: 100%;
+   height: 60%;
+   width: 90%;
+   margin: 50px auto;
+   max-width: 1000px;
  }
  
  #container {
-   width: 100%;
+ 	margin:  auto;
+   width: 40%;
+   height:  500px;
  }
