--- a/style.css
+++ b/style.css
@@ -1,16 +1,51 @@
- #map {
-   height: 60%;
-   width: 90%;
-   margin: 50px auto;
-   max-width: 1000px;
- }
- 
- #container {
- 	margin:  auto;
-   width: 40%;
-   height:  500px;
- }
- #dropdown{
- 	height: 265px;
- 	background: white;
- }
+body {
+  font-family: 'Montserrat', sans-serif;
+}
+
+#map {
+  height: 60%;
+  width: 100%;
+  margin: 0px auto;
+  padding: 0px;
+}
+
+#contain {
+  margin: auto;
+  width: 100%;
+  height: 500px;
+}
+
+.infoText {
+  display: inline;
+  float: left;
+  width: 40%;
+  margin: 0 5% 0 5%;
+}
+
+#menu {
+  display: inline;
+  height: 60%;
+  width: 90%;
+  background: white;
+  float: right;
+  margin: 2% 5% 0% 5% auto;
+  padding: 2%;
+  border: 0px;
+  font-size: 100%;
+}
+
+#select {
+  font-size: 125%;
+  font-weight: 600;
+  text-align: center;
+}
+
+.selectPlace {
+	padding: 4px;
+  display: block;
+  width: 200px;
+  float: left;
+  border: 1px solid;
+  background: white;
+  margin: 0.5%;
+}
