--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
   font-family: 'Montserrat', sans-serif;
+  padding: 0px;
+  margin:  0px auto;
 }
 
 #map {
@@ -15,12 +17,6 @@ body {
   height: 500px;
 }
 
-.infoText {
-  display: inline;
-  float: left;
-  width: 40%;
-  margin: 0 5% 0 5%;
-}
 
 #menu {
   display: inline;
@@ -35,20 +31,24 @@ body {
 }
 
 #select {
-  font-size: 125%;
+  font-size: 140%;
   font-weight: 600;
   text-align: center;
 }
 
 .selectPlace {
-	padding: 4px;
-  display: block;
-  width: 200px;
+	padding: 5px;
+  display: inline-block;
+  width: 18%;
   float: left;
-  border: 1px solid;
-  background: white;
-  margin: 0.5%;
+  /* border: 1px solid; */
+  background: #5D9732;
+  margin: 4px 4px 4px 4px;
+  text-align: center;
+  border-radius: 0% 0% 100% 100%;
+  font-size: 110%;
+  /* box-shadow: 0px 0px 10px red; */
 }
 #clear{
-	background: blue;
+	background: #005695;
 }
