--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: 'Montserrat', sans-serif;
   padding: 0px;
-  margin:  0px auto;
+  margin: 0px auto;
 }
 
 #map {
@@ -14,14 +14,12 @@ body {
 #contain {
   margin: auto;
   width: 100%;
-  height: 500px;
+  height: 40%;
 }
 
-
 #menu {
-  display: inline;
-  /* height: 60%; */
-  width: 90%;
+  display: inline;  /* height: 100%; */
+  width: 100%;
   background: white;
   float: right;
   margin: 2% 5% 0% 5% auto;
@@ -37,18 +35,39 @@ body {
 }
 
 .selectPlace {
-	padding: 5px;
+  padding: 5px;
   display: inline-block;
-  width: 18%;
-  float: left;
+  width: 20%;
+  float: right; 
   /* border: 1px solid; */
   background: #5D9732;
-  margin: 4px 4px 4px 4px;
+  margin: 1% 2% auto;
   text-align: center;
   border-radius: 0% 0% 100% 100%;
-  font-size: 110%;
-  /* box-shadow: 0px 0px 10px red; */
+  font-size: 110%;  /* box-shadow: 0px 0px 10px red; */
+  word-wrap: break-word;
+  height: 50px;
 }
-#clear{
-	background: #005695;
+
+#clear {
+  background: #005695;
+}
+
+@media screen and (max-width:800px) {
+	#map{
+		height: 50%;
+	}
+	#menu {
+		width: 100%;
+	}
+  .selectPlace {
+  	width: 18%;
+  	height: 45px;
+  	margin: 1% 4% 0% 0% auto;
+    font-size: 75%;
+    border-radius: 0% 0% 0% 0%;
+    /* width: 25%; */
+
+  }
+
 }
