--- a/about.css
+++ b/about.css
@@ -51,7 +51,7 @@
   top: 50%;
   margin: 0px auto;
   /* bottom: 0; */
-  left: -52;
+  left: -40;
   padding: 10px;
   text-align: center;
   background: rgba(10, 10, 10, 0.9);
@@ -65,8 +65,7 @@
   height: 3%;
 }
 
-/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-@media screen and (max-height:450px) {
+@media screen {
   .sidenav {
     padding-top: 15px;
   }
@@ -74,5 +73,28 @@
   .sidenav a {
     font-size: 18px;
   }
+  #about {
+	color: #ffffff;
+  position: fixed;
+  /* bottom: 0; */
+  left: 0;
+  right:  0;
+  top: initial;
+  bottom: 0;
+  margin: 0px auto;
+  /* bottom: 0; */
+  left: -52;
+  padding: 10px;
+  text-align: center;
+  background: rgba(10, 10, 10, 0.9);
+  -ms-transform:rotate(0deg); /* IE 9 */
+  -moz-transform:rotate(0deg); /* Firefox */
+  -webkit-transform:rotate(0deg); /* Safari and Chrome */
+  -o-transform:rotate(0deg); /* Opera */
+  border-radius: 0% 0% 00% 0;
+  width: 100%;
+  /* height: 20px; */
+  font-size: 80%;
+}
 
 }
