--- a/about.css
+++ b/about.css
@@ -47,30 +47,28 @@
 
 #about {
 	color: #ffffff;
-  position: absolute;
-  top: 50%;
-  margin: 0px auto;
+  position: fixed;
   /* bottom: 0; */
-  left: -40;
+  left: 0;
+  right:  0;
+  top: initial;
+  bottom: 0;
+  margin: 0px auto;
+
   padding: 10px;
   text-align: center;
   background: rgba(10, 10, 10, 0.9);
-  z-index: 1;
-  -ms-transform:rotate(90deg); /* IE 9 */
-  -moz-transform:rotate(90deg); /* Firefox */
-  -webkit-transform:rotate(90deg); /* Safari and Chrome */
-  -o-transform:rotate(90deg); /* Opera */
-  border-radius: 150% 150% 00% 0;
-  width: 8%;
-  height: 3%;
-  	cursor: pointer;
+  border-radius: 0% 0% 00% 0;
+  width: 100%;
+  /* height: 20px; */
+  font-size: %;
 
 }
 #about  :hover{
 	cursor: pointer;
 }
 
-@media screen {
+@media screen and (max-width:800px){
   .sidenav {
     padding-top: 15px;
   }
@@ -87,8 +85,7 @@
   top: initial;
   bottom: 0;
   margin: 0px auto;
-  /* bottom: 0; */
-  left: -52;
+
   padding: 10px;
   text-align: center;
   background: rgba(10, 10, 10, 0.9);
