--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 #map {
-  height: 60%;
+  height: 50%;
   width: 100%;
   margin: 0px auto;
   padding: 0px;
@@ -22,7 +22,7 @@ body {
   width: 100%;
   background: white;
   float: right;
-  margin: 2% 5% 0% 5% auto;
+  margin: 0% auto;
   padding: 2%;
   border: 0px;
   font-size: 100%;
@@ -37,14 +37,14 @@ body {
 .selectPlace {
   padding: 5px;
   display: inline-block;
-  width: 20%;
+  width: 21%;
   float: right; 
   /* border: 1px solid; */
   background: #5D9732;
-  margin: 1% 2% auto;
+  margin: 1.5% 1% auto;
   text-align: center;
   border-radius: 0% 0% 0% 0%;
-  font-size: 110%;  /* box-shadow: 0px 0px 10px red; */
+  font-size: 125%;  /* box-shadow: 0px 0px 10px red; */
   word-wrap: break-word;
   height: 50px;
   line-height: 50px;
@@ -58,6 +58,7 @@ body {
 }
 .selectPlace span{
 	line-height: normal;
+	margin: 50px 0 0 0;
 }
 .selectPlace :hover{
 	cursor: pointer;
@@ -67,21 +68,30 @@ body {
   background: #005695;
 }
 
-@media screen and (max-width:800px) {
+@media screen and (max-width:1050px) {
 	#map{
 		height: 45%;
 	}
 	#menu {
 		width: 100%;
+		font-size: 100%;
+		padding-right: 6%;
+		padding-left: 6%;
+	}
+	#select{
+		margin: 0 auto;
+		padding-left: 8%;
 	}
   .selectPlace {
   	width: 18%;
   	height: 45px;
   	margin: 1% 4% 0% 0% auto;
-    font-size: 75%;
+    font-size: 65%;
     border-radius: 0% 0% 0% 0%;
-    /* width: 25%; */
+      line-height: normal;
+      padding-top: 10px;
 
+    /* width: 25%; */
   }
 
 }
